--- a/locale/ja/client.json
+++ b/locale/ja/client.json
@@ -259,6 +259,7 @@
   "signin.message.private.title": "<0>{0}</0> はプライベートなスペースです。サインインして投票してください。",
   "signin.message.socialbutton.intro": "ログイン",
   "signin.name.placeholder": "あなたの名前",
+  "signin.uab.cas": "",
   "validation.custom.maxattachments": "最大 {number} 個の添付ファイルが許可されます。",
   "validation.custom.maximagesize": "画像サイズは{kilobytes}KB未満である必要があります。"
 }
