--- a/locale/nl/client.json
+++ b/locale/nl/client.json
@@ -259,6 +259,7 @@
   "signin.message.private.title": "<0>{0}</0> is een privéruimte. U moet ingelogd zijn om deel te nemen en te stemmen.",
   "signin.message.socialbutton.intro": "Inloggen met",
   "signin.name.placeholder": "Jouw naam",
+  "signin.uab.cas": "",
   "validation.custom.maxattachments": "Er zijn maximaal {number} bijlagen toegestaan.",
   "validation.custom.maximagesize": "De afbeeldingsgrootte moet kleiner zijn dan {kilobytes}KB."
 }
