--- a/locale/pl/client.json
+++ b/locale/pl/client.json
@@ -259,6 +259,7 @@
   "signin.message.private.title": "<0>{0}</0> to przestrzeń prywatna, musisz się zalogować, aby uczestniczyć i głosować.",
   "signin.message.socialbutton.intro": "Zaloguj się za pomocą",
   "signin.name.placeholder": "Twoje imię",
+  "signin.uab.cas": "",
   "validation.custom.maxattachments": "Maksymalna liczba załączników to {number}.",
   "validation.custom.maximagesize": "Rozmiar obrazu musi być mniejszy niż {kilobytes}KB."
 }
